sfSandBoxCode/force-app/main/default/objects/Opportunity_BIB_Item__c/Opportunity_BIB_Item__c.object-meta.xml
<CustomObject>
    <label>Opportunity BIB Item</label>
    <nameField>
        <displayFormat>OBIB-{0000}</displayFormat>
        <label>Opportunity BIB Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity BIB Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>