sfSandBoxCode/force-app/main/default/objects/Opportunity_BIB_Item__c/fields/Approved_Supplementary_Item__c.field-meta.xml
<CustomField>
    <fullName>Approved_Supplementary_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approve an item that will be included in the supplementary work order</description>
    <inlineHelpText>Approve an item that will be included in the supplementary work order</inlineHelpText>
    <label>Approved Supplementary Item</label>
    <type>Checkbox</type>
</CustomField>