sfSandBoxCode/force-app/main/default/objects/Opportunity_BIB_Item__c/fields/Opportunity_Item__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Item</label>
    <referenceTo>Opportunity_Item__c</referenceTo>
    <relationshipLabel>Opportunity BIB Items</relationshipLabel>
    <relationshipName>Opportunity_BIB_Items</relationshipName>
    <type>Lookup</type>
</CustomField>